--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.08.2022 08:31:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.08.2022 09:17:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -134,7 +134,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Indicka rybi korma s kousky rybich filetu {hejk, makrela}, zeleninou, orisky, zazvorem a kokosovym mlekem, jasminova ryze155</li><li>Peceny filet z cerstveho morskeho vlka s krenovou jogurtovou omackou, pecene brambory, salatek 179</li><li>Korejske restovane veprove nudlicky s miso, chilli, zelenou cibulkou, koriandrem a prazenym sezamem, ryzove nudle, salatek 155</li><li>Wrap s uzenym hovezim past</li><li>rami, rajcetem a ledovym salatem, omacka s celozrnnou horcici, pecene brambory, salatek 179</li><li>Pecena glazovana cervena repa, cizrnovy hummus, sazene vejce, zelene bylinky 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s petrzelkovou tahini, cockovy salat s paprikami, pecenymi cuketami a zelenymi bylinkami 155</li><li>Peceny filet z cerstve prazmy s petrzelkovou tahini, cockovy salat s paprikami, pecenymi cuketami a zelenymi bylinkami 179</li><li>Pad kra pao – restovane thajske kureci {volny chov} s thajskou bazalkou, chilli, cesnekem, cuketami a sazenym vejcem, jasminova ryze, salatek 155</li><li>Kanci burger {horcicna majoneza, rajce, ledovy salat, rajcatovy dzem}, pecene brambory, salatek z cervene repy {L} 179</li><li>Maghrebska zapecena saksuka s rajcaty, paprikami, vejci a balkanskym syrem, zeleninovy kuskus, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
