--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.08.2022 08:02:59</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.08.2022 09:01:02</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,49 +7,35 @@
 <h5>Pondělí, 29. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>V OBDOBÍ 25.-26.8. BUDE ZAVŘENO Z DŮVODU ODSTÁVKY TEPLÉ VODY.</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Zeleninová</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený sýr s vařeným bramborem a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							143,-
-						</span>
-</p>
-<p>
-<strong>Hovězí kostky na kmíně s rýží NEBO těstovinou</strong>
+<strong>Vepřový guláš s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s marinovanými vepřovými nudličkami a bagetkou</strong>
+<strong>Špagety se žampionovo - slaninovou omáčkou a sýrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: opecene brambory, kari kebab, zelenina, ryze, Tilapie se slaninou na rajcatech</strong>
+<strong>TEPLÝ BUFET: zelenina, ryze, grilované kuřecí špalíky, pečený brambor, Tilapie s balsamico cibulkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Míchaný s jogurtem a kopcem, ledový salát s hořčičným dresinkem</strong>
+<strong>SALÁTY: ledový salát s červenou řepou a chilli dresinkem, kuskus se sušenými rajčaty, ledový salát</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -77,12 +63,12 @@
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Bramborovo-pórkový krém s krutony v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka">300ml Bramborovo-pórkový krém v menu <em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Bramborovo-pórkový krém s krutony samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka">300ml Bramborovo-pórkový krém; samostatně <em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">49 Kč</div>
 <div class="clear"></div>
 </li>
@@ -129,7 +115,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s petrzelkovou tahini, cockovy salat s paprikami, pecenymi cuketami a zelenymi bylinkami 155</li><li>Peceny filet z cerstve prazmy s petrzelkovou tahini, cockovy salat s paprikami, pecenymi cuketami a zelenymi bylinkami 179</li><li>Pad kra pao – restovane thajske kureci {volny chov} s thajskou bazalkou, chilli, cesnekem, cuketami a sazenym vejcem, jasminova ryze, salatek 155</li><li>Kanci burger {horcicna majoneza, rajce, ledovy salat, rajcatovy dzem}, pecene brambory, salatek z cervene repy {L} 179</li><li>Maghrebska zapecena saksuka s rajcaty, paprikami, vejci a balkanskym syrem, zeleninovy kuskus, salatek {L} 155</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s omackou aiolli, pecene brambory, salatek 155</li><li>Smazeny filet z cerstve tresky v tempura testicku s omackou aiolli, pecene brambory, salatek {L} 179</li><li>Indicky grilovany veprovy kebab v tanduri marinade, dynovy pilaf z kulate ryze, jogurtovy dip, salatek 155</li><li>Grilovane kruti medailonky s omackou Salsa rossa, pohanka se smazenou cibulkou, salatek 179</li><li>Zapecene cukety plnene cervenou cockou s porkem a balkanskym syrem, dynovy pilaf z kulate ryze, salatek 15</li></ol>
 </td>
 </tr>
 </table>
