--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.08.2022 08:20:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.08.2022 09:13:46</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Středa, 31. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Krémová rybí</strong>
+<strong>Bramborová se zázvorem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Uzená krkovička s křenovou omáčkou a houskovým knedlíkem NEBO bramborem</strong>
+<strong>Vepřová kotleta s kroketami a BBQ omáčku</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Srbské vepřové rizoto se sýrem a okurkou NEBO řepou</strong>
+<strong>Toskánské hovězí kostky s rýži</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							147,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s grilovanými kuřecími křidélky.</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Smetanové brambory, zelenina, rýže, Tilapie se sušenými rajčaty, kuřecí prsa na žlutém kari</strong>
+<strong>TEPLÝ BUFET: smetanové brambory, Tilapie s cibulkou a houbami, zelenina, rýže, pečené vepřové koleno</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kuskus se sušenými rajčaty, ledový s červenou řepou</strong>
+<strong>SALÁTY: zeleninový s hořčičným dresinkem, salát z červené řepy s Kozím sýrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -135,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s ancovickovo-citronovym dresinkem, kari ze zeleneho hrachu, salatek 155</li><li>Peceny filet z cerstve prazmy kralovske s ancovickovo-citronovym dresinkem, kari ze zeleneho hrachu, salatek 179</li><li>Pikantni bengalske kruti jalfrezi s pecenymi paprikami a lzici zakysane smetany, jasminova ryze, salatek 155</li><li>Wrap s uzenymi koroptvimi prsicky, rajcetem a ledovym salatem, avokadove guacamole, pecene brambory, salatek {L} 179</li><li>Kapustove placicky s goudou, petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a bazalkovym olivovym olejem, zeleninove birjany z basmati ryze, salatek 155</li><li>Spagety s uzenym lososem, pecenymi rajcaty, bazalkou a pesto rosso {L} 179</li><li>Malajsky hovezi rendang s kokosovym mlekem, citronovou travou a vonavym korenim, jasminova ryze, salatek 155</li><li>Grilovane danci kofte, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 175</li><li>Indicke kvetakove kari se zelenym hrachem, rajcaty, jogurtem a sazenym vejcem, jasminova ryze 155</li></ol>
 </td>
 </tr>
 </table>
